public/css/main.css
* {
  font-family: "Helvetica", "Helvetica", Arial, sans-serif;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 100;
  font-family: "Helvetica Neue";
}

a {
  color: #000;
  text-decoration: none;
  font-weight: bold;
}

#connecting {
  text-align: center;
}

.brand-name {
  margin-bottom: 5px;
  text-align: center;
}

#game {
  margin: 0 auto;
  display: none;
  opacity: 0;
}

#game, #connecting {
  -webkit-transition: opacity .5s ease-in;
}

#tickbar, #c {
  /*display: none;*/
}

.container {
  width: 1001px;
  margin: 0 auto;
}

#controls {
  display: none;
  margin-top: 5px;
  text-align: center;
}

.place-cells, .play {
  text-transform: lowercase;
  border-radius: 100px;
  text-decoration: none;
  color: #fff;
  display: block;
  border: solid #bbb 3px;
  color: #bbb;
  width: 110px;
  padding: 6px;
  margin: 0 auto;
  font-weight: bold;
  transition: all .5s cubic-bezier(0.215, 0.61, 0.355, 1);
}

.place-cells.enabled {
  color: #222;
}

#stats {
  display: none;
  text-align: center;
  font-weight: 100;
  margin-top: 7px;
  text-transform: uppercase;
  font-size: 12px;
}

.canvas-container {
  position: relative;
}

.new-player-container {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(255, 255, 255, .5);
  -webkit-transition: opacity .5s ease-in;
}

#new-player {
  text-align: center;
  position: absolute;
  left: 50%;
  bottom: 24%;
  width: 192px;
  margin-left: -108px;
  background: #fff;
  padding: 25px;
  border: solid 1px #999;
  box-shadow: 0 2px 4px rgba(0, 0, 0, .4);
}

#new-player input {
  border: solid 1px #ddd;
  text-align: center;
  padding: 8px;
  margin-bottom: 5px;
  font-weight: 100;
  font-size: 16px;
  width: 175px;
}

#new-player input:focus {
  outline: none;
}

#new-player .colorpicker {
  width: 192px;
  height: 100px;
  margin: 0 auto;
  margin-bottom: 5px;
  border: solid 1px #ddd;
}

#new-player .colorpicker div {
  text-align: center;
  font-weight: 100;
  line-height: 100px;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
}

.place-cells {
  -webkit-transition: scale .5s ease-in;
}

.place-cells:hover {
}

.place-cells:active {
  -webkit-transform: scale(0.9, 0.9);
}

.leaderboard-container, .players-online-container {
  font-weight: 100;
  width: 30%;
  margin: 20px 10% 10px 10%;
}

.leaderboard-container h2, .players-online-container h2 {
  font-size: 22px;
  margin: 0 0 5px;
  text-align: center;
}

#leaderboard .color, #players-online .color {
  margin-top: 2px;
  margin-right: 5px;
  width: 13px;
  height: 13px;
  float: left;
}

#leaderboard .cells {
  float: right;
}

.leaderboard-container {
  float: left;
}

.players-online-container {
  float: right;
}

#leave-game {
  text-transform: lowercase;
  font-weight: bold;
}

